# epson-projector-esphome

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .yamllint.yml  LICENSE  README.md  example.yaml  pyproject.toml
.github/workflows/: ci.yml  esphome-compat.yml  tests.yml
components/epson_projector/: __init__.py  binary_sensor.py  command.cpp  command.h  command_queue.cpp  command_queue.h  const.py  cpp23_compat.h  entity_base.h  entity_metadata.h  epson_binary_sensor.cpp  epson_binary_sensor.h  epson_number.cpp  epson_number.h  epson_projector.cpp  epson_projector.h  epson_select.cpp  epson_select.h  epson_sensor.cpp  epson_sensor.h  epson_switch.cpp  epson_switch.h  epson_text_sensor.cpp  epson_text_sensor.h  models.py  number.py  platform_helpers.py  protocol_constants.h  query_metadata.h  response_parser.cpp  response_parser.h  select.py  sensor.py  switch.py  text_sensor.py
components/epson_projector/binary_sensor/: epson_binary_sensor.cpp  epson_binary_sensor.h
components/epson_projector/number/: epson_number.cpp  epson_number.h
components/epson_projector/select/: epson_select.cpp  epson_select.h
components/epson_projector/sensor/: epson_sensor.cpp  epson_sensor.h
components/epson_projector/switch/: epson_switch.cpp  epson_switch.h
docs/: CONFIGURATION.md  DEVELOPMENT.md  HARDWARE.md  MODELS.md  PROTOCOL.md
scripts/: run-tests.sh  setup-hooks.sh
tests/: conftest.py  test_config_validation.py  test_models.py
tests/cpp/: CMakeLists.txt  test_command.cpp  test_command_queue.cpp  test_response_parser.cpp
tests/esphome/: test_config.yaml  test_minimal.yaml
